# barn-lights-firmware

./: .gitignore  AGENTS.md  ESP-IDF.md  README.md  build_app.sh  four_run.json  left.json  project-spec.md  right.json  run_all_tests.sh
.github/workflows/: ci.yml
config/: left.json  readme.md  right.json
docs/: flash-guide.md  project-spec.md  udp-data-format.md
firmware/: CMakeLists.txt  README.md  readme.md  sdkconfig.defaults
firmware/components/: README.md
firmware/include/: config_autogen.h
firmware/main/: CMakeLists.txt  README.md  app_main.c  control_task.c  control_task.h  driver_task.c  driver_task.h  net_task.c  net_task.h  net_task.md  rx_task.c  rx_task.h  startup_sequence.c  startup_sequence.h  status_task.c  status_task.h
firmware/main/test/: CMakeLists.txt  test_net_task.c
firmware/test/: CMakeLists.txt  README.md  test_driver_task.c  test_rx_task.c  test_startup_sequence.c  test_status_task.c
tests/: readme.md
tools/: build_app.sh  gen_config.py  heartbeat_monitor.py  readme.md  run_all_tests.sh
tools/tests/: test_gen_config.py
